# backtester-d

./: .env.example  .gitignore  Procfile  nixpacks.toml  pyproject.toml  railway.json
backtester/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backtester/management/commands/: daily_refresh.py  setup_initial.py
backtests/: admin.py  apps.py  engine.py  forms.py  metrics.py  models.py  optimizer.py  urls.py  views.py
backtests/migrations/: 0001_initial.py  0002_backtest_sortino_ratio.py
backtests/strategies/: __init__.py  base.py  momentum.py  orb.py  pdhl.py  vwap_reclaim.py
backtests/templates/backtests/: base.html  index.html  results.html
backtests/templates/backtests/partials/: cross_validation_results.html  error.html  form_errors.html  optuna_results.html  portfolio_results.html  results_panel.html  walk_forward_results.html
prices/: admin.py  models.py
prices/management/commands/: compute_indicators.py  fetch_intraday.py  fetch_prices.py
prices/migrations/: 0001_initial.py  0002_indicator.py  0003_intradaybar.py
securities/: admin.py  models.py
securities/management/commands/: fetch_securities.py  setup_initial.py
securities/migrations/: 0001_initial.py
trading/: admin.py  models.py  runner.py  state.py  urls.py  views.py
trading/migrations/: 0001_initial.py  0002_livesession_margin_multiplier_livesession_mode_and_more.py
trading/templates/trading/: index.html
trading/templates/trading/partials/: error.html  session_card.html
